Enable `preserveWhitespace: false`, add spaces where needed, fix whitespace when copying text

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2505,6 +2505,12 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 		padding: 0;
 	}
 
+	#chat .from::after {
+		/* Add a space because mobile view changes to block display without paddings */
+		content: " ";
+		white-space: pre;
+	}
+
 	#chat .channel .message.highlight {
 		padding-left: 5px;
 	}
